--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
-          <img src="{% static 'assets/img/Picture6.JPG' %}" class="img-fluid mb-3 mb-lg-0" alt="">
+          <img src="{% static 'assets/img/Picture6.jpg' %}" class="img-fluid mb-3 mb-lg-0" alt="">
         </div>
 
       </div>
