--- a/pages/templates/pages/about-us.html
+++ b/pages/templates/pages/about-us.html
@@ -35,9 +35,20 @@
           <div class="col-lg-6 content order-last  order-lg-first">
             <h3>About Us</h3>
             <p>
-              About us content here.
+              
+              DANBY Global Nigeria is a waste management company that deals in the business of collection,
+              processing, and exporting of PLASTICS  WASTE such as PET (polyethylene terephthalate) 
+              plastic, (Film Bottle, PE, PP, HDPE, BOPP, LLDPE, LDPE, and any other polybag waste), 
+              ABS plastic, Expanded Polystyrene (EPS), Polycarbonate PC, polyvinyl chloride (PVC)
+              and any other related engineered plastic waste.<br />
+              
+              We articulate effectively the different knowledge areas of Plastic and Non-Plastic 
+              waste management, which include; collecting/purchasing, shredding, exporting, and 
+              recycling processes.<br />
+              
+              We export to Europe, China, India, Hong Kong, Malaysia, Thailand, and Korea.
             </p>
-            <ul>
+            <!--<ul>
               <li data-aos="fade-up" data-aos-delay="100">
                 <i class="bi bi-diagram-3"></i>
                 <div>
@@ -59,7 +70,7 @@
                   <p>Some important content</p>
                 </div>
               </li>
-            </ul>
+            </ul>-->
           </div>
         </div>
 
@@ -73,28 +84,28 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="{{ partners_count }}" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
               <p>Clients</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="{{ projects_count }}" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="57" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
               <p>Hours Of Support</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter"></span>
               <p>Workers</p>
             </div>
           </div>
@@ -158,9 +169,9 @@
           {% for member in team %}
                 <div class="col-lg-4 col-md-6 d-flex">
                   <div class="member">
-                    <img src="{% static '{{ member.picture.url }}' %}" class="img-fluid" alt="">
+                    <img src="{% if member.display_picture.url %} {{ member.display_picture.url }} {% endif %}" class="img-fluid" alt="">
                     <div class="member-content">
-                      <h4><a href="{% url 'pages:team_member_details' member.id %}">{{ member.user.username }}</a></h4>
+                      <h4><a href="{% url 'pages:team_member_details' member.id %}">{{ member.user.get_full_name }}</a></h4>
                       <span>
                         {% if member.designation == 'DFL' %}
                           Director Finance &amp; Logistics 
@@ -174,10 +185,10 @@
                         {{ member.words }}
                       </p>
                       <div class="social">
-                        <a href=""><i class="bi bi-twitter"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                        <a href=""><i class="bi bi-linkedin"></i></a>
+                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                   </div>
