--- a/pages/templates/pages/services.html
+++ b/pages/templates/pages/services.html
@@ -42,10 +42,10 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <div class="card-img">
-                <img src="assets/img/storage-service.jpg" alt="" class="img-fluid">
+                <img src="{{ service.picture.url }}" alt="" class="img-fluid">
               </div>
-              <h3><a href="service-details.html" class="stretched-link">{{ service.title }}</a></h3>
-              <p>{{ service.description }}</p>
+              <h3><a href="{% url 'pages:service_details' service.id %}" class="stretched-link">{{ service.title }}</a></h3>
+              <p>{{ service.description | truncatewords:5 }}</p>
             </div>
           </div>
           {% endfor %}
