--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-  <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+  <link href="{% static 'assets/img/favicon.PNG' %}" rel="icon">
+  <link href="{% static 'assets/img/logo-big.PNG' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,10 +92,10 @@
     <div class="container">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
-          <a href="index.html" class="logo d-flex align-items-center">
-            <span>DANBY GLOBAL</span>
+          <a href="{% url 'pages:index' %}" class="logo d-flex align-items-center">
+            <span>DANBY Global</span>
           </a>
-          <p>About DANBY GLOBAL</p>
+          <p>About DANBY Global</p>
           
           <div class="social-links d-flex mt-4">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
