--- a/pages/templates/pages/team-member-details.html
+++ b/pages/templates/pages/team-member-details.html
@@ -31,7 +31,7 @@
 
           <div class="col-lg-5">
             <div class="services-list">
-              <img src="{% if member.display_picture.url %} {{ member.display_picture.url }} {% endif %}" alt="" class="img-fluid">
+              <img src="{% if member.designation == 'DAW' %}{% static 'assets/img/team/daw.jpg' %}{% elif member.designation == 'OMM' %}{% static 'assets/img/team/omm.jpg' %} {% elif member.designation == 'DFL' %}{% static 'assets/img/team/dfl.jpg' %}{% endif %}" alt="" class="img-fluid">
             </div>
           </div>
 
