--- a/pages/templates/pages/service-details.html
+++ b/pages/templates/pages/service-details.html
@@ -33,7 +33,7 @@
 
           <div class="col-lg-4">
             <div class="services-list">
-              <img src="{{ service.picture.url }}" alt="" class="img-fluid services-img">
+              <!--<img src="{# service.picture.url #}" alt="" class="img-fluid services-img">-->
             </div>
 
           </div>
