--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>{% block head_title %}{% endblock head_title %} | DANBY GLOBAL</title>
+  <title>{% block head_title %}{% endblock head_title %} | DANBY Global</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,7 +48,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="{% url 'pages:index' %}" class="active">Home</a></li>
-          <li><a href="{% url 'pages:about_us' %}">About</a></li>
+          <li><a href="{% url 'pages:about_us' %}">About us</a></li>
           <li><a href="{% url 'pages:services' %}">Services</a></li>
           <li><a href="{% url 'blog:blog-posts' %}">Blog</a></li>
           <li><a href="{% url 'faqs:faqs' %}">FAQs</a></li>
