--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -43,7 +43,7 @@
             <div class="col-lg-3 col-6">
               <div class="stats-item text-center w-100 h-100">
                 <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Ours of Support</p>
+                <p>Hours of Support</p>
               </div>
             </div>
 
